Update to 0.2, now compatible with Jigsaw b144